stderr
warning: [options] bootstrap class path not set in conjunction with -source 1.6
C:\Development\mcdev\unraveling\build\sources\java\unraveling\ShapeData.java:3: error: package java.lang.util does not exist
import java.lang.util.List;
                     ^
C:\Development\mcdev\unraveling\build\sources\java\unraveling\ShapeData.java:24: error: cannot find symbol
    public ShapeData(List<TileEntity> myGenerators, int GEN_NUM) throws IllegalArgumentException {
                     ^
  symbol:   class List
  location: class ShapeData
C:\Development\mcdev\unraveling\build\sources\java\unraveling\VoidAggregationHandler.java:63: error: cannot find symbol
    public boolean searchForGenerators(TileDarkGenMain dgm) {
                                       ^
  symbol:   class TileDarkGenMain
  location: class VoidAggregationHandler
C:\Development\mcdev\unraveling\build\sources\java\unraveling\TileAbstractVisNode.java:77: error: cannot find symbol
		if (VisNetHandler.isNodeValid(getParent())) {
		    ^
  symbol:   variable VisNetHandler
  location: class TileAbstractVisNode
C:\Development\mcdev\unraveling\build\sources\java\unraveling\TileAbstractVisNode.java:95: error: cannot find symbol
		if (VisNetHandler.isNodeValid(this.getParent())) {
		    ^
  symbol:   variable VisNetHandler
  location: class TileAbstractVisNode
C:\Development\mcdev\unraveling\build\sources\java\unraveling\TileAbstractVisNode.java:102: error: package VisNetHandler does not exist
			HashMap<WorldCoordinates, WeakReference<TileAbstractVisNode>> sourcelist = VisNetHandler.sources.get(worldObj.provider.dimensionId);
			                                                                                        ^
C:\Development\mcdev\unraveling\build\sources\java\unraveling\TileAbstractVisNode.java:107: error: package VisNetHandler does not exist
			VisNetHandler.sources.put( worldObj.provider.dimensionId, sourcelist );
			             ^
C:\Development\mcdev\unraveling\build\sources\java\unraveling\TileAbstractVisNode.java:134: error: cannot find symbol
		return VisNetHandler.isNodeValid(getParent()) ? 
		       ^
  symbol:   variable VisNetHandler
  location: class TileAbstractVisNode
C:\Development\mcdev\unraveling\build\sources\java\unraveling\TileAbstractVisNode.java:169: error: cannot find symbol
					if (n==null || n.get()==null || !VisNetHandler.canNodeBeSeen(this, n.get())) {
					                                 ^
  symbol:   variable VisNetHandler
  location: class TileAbstractVisNode
C:\Development\mcdev\unraveling\build\sources\java\unraveling\TileAbstractVisNode.java:189: error: cannot find symbol
				VisNetHandler.addSource(getWorldObj(), this);
				^
  symbol:   variable VisNetHandler
  location: class TileAbstractVisNode
C:\Development\mcdev\unraveling\build\sources\java\unraveling\TileAbstractVisNode.java:192: error: cannot find symbol
			if (!isSource() && !VisNetHandler.isNodeValid(getParent())) {
			                    ^
  symbol:   variable VisNetHandler
  location: class TileAbstractVisNode
C:\Development\mcdev\unraveling\build\sources\java\unraveling\TileAbstractVisNode.java:193: error: cannot find symbol
				setParent(VisNetHandler.addNode(getWorldObj(), this));				
				          ^
  symbol:   variable VisNetHandler
  location: class TileAbstractVisNode
C:\Development\mcdev\unraveling\build\sources\java\unraveling\VoidAggregationHandler.java:36: error: worldObj has protected access in TileEntity
            processTransformation(dg.worldObj);
                                    ^
C:\Development\mcdev\unraveling\build\sources\java\unraveling\VoidAggregationHandler.java:36: error: method processTransformation in class VoidAggregationHandler cannot be applied to given types;
            processTransformation(dg.worldObj);
            ^
  required: World,int
  found: World
  reason: actual and formal argument lists differ in length
C:\Development\mcdev\unraveling\build\sources\java\unraveling\VoidAggregationHandler.java:68: error: cannot find symbol
        ArrayList<TileEtity> myGenerators = new ArrayList<TileEtity>();
                  ^
  symbol:   class TileEtity
  location: class VoidAggregationHandler
C:\Development\mcdev\unraveling\build\sources\java\unraveling\VoidAggregationHandler.java:68: error: cannot find symbol
        ArrayList<TileEtity> myGenerators = new ArrayList<TileEtity>();
                                                          ^
  symbol:   class TileEtity
  location: class VoidAggregationHandler
C:\Development\mcdev\unraveling\build\sources\java\unraveling\VoidAggregationHandler.java:83: error: cannot find symbol
        if (myGenerators.size() != GEN_NUM) {
                                   ^
  symbol:   variable GEN_NUM
  location: class VoidAggregationHandler
C:\Development\mcdev\unraveling\build\sources\java\unraveling\VoidAggregationHandler.java:86: error: cannot find symbol
        ShapeData sd = new ShapeData(myGenerators, GEN_NUM);
                                                   ^
  symbol:   variable GEN_NUM
  location: class VoidAggregationHandler
C:\Development\mcdev\unraveling\build\sources\java\unraveling\VoidAggregationHandler.java:94: error: cannot find symbol
		for(int i = 0; i < GEN_NUM; i++) {
		                   ^
  symbol:   variable GEN_NUM
  location: class VoidAggregationHandler
C:\Development\mcdev\unraveling\build\sources\java\unraveling\VoidAggregationHandler.java:95: error: cannot find symbol
            Vec3 genPos = myGenerators.get(i);
                          ^
  symbol:   variable myGenerators
  location: class VoidAggregationHandler
C:\Development\mcdev\unraveling\build\sources\java\unraveling\VoidAggregationHandler.java:113: error: cannot find symbol
		for(int i = 0; i < GEN_NUM; i++) {
		                   ^
  symbol:   variable GEN_NUM
  location: class VoidAggregationHandler
C:\Development\mcdev\unraveling\build\sources\java\unraveling\VoidAggregationHandler.java:114: error: cannot find symbol
            Vec3 genPos = myGenerators.get(i);
                          ^
  symbol:   variable myGenerators
  location: class VoidAggregationHandler
C:\Development\mcdev\unraveling\build\sources\java\unraveling\block\BlockDarkGen.java:172: error: cannot find symbol
        TileEntity tileentity = world.getBlockTileEntity(par2, par3, par4);
                                ^
  symbol:   variable world
  location: class BlockDarkGen
C:\Development\mcdev\unraveling\build\sources\java\unraveling\block\BlockDarkGen.java:175: error: cannot find symbol
            if (!worldObj.isRemote) {
                 ^
  symbol:   variable worldObj
  location: class BlockDarkGen
C:\Development\mcdev\unraveling\build\sources\java\unraveling\block\BlockDarkGen.java:176: error: cannot find symbol
                tileentity.notifyOfDestruction();
                          ^
  symbol:   method notifyOfDestruction()
  location: variable tileentity of type TileEntity
C:\Development\mcdev\unraveling\build\sources\java\unraveling\tileentity\TileDarkGen.java:61: error: cannot find symbol
                VoidAggregationHandler.generatorUpdateCallback(my_cluster_id, this);
                ^
  symbol:   variable VoidAggregationHandler
  location: class TileDarkGen
C:\Development\mcdev\unraveling\build\sources\java\unraveling\tileentity\TileDarkGen.java:70: error: cannot find symbol
        if (++this.drawDelay % 5 != 0) {
                  ^
  symbol: variable drawDelay
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
27 errors
1 warning

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output.
